Added functionality to generate secret codes using hashids

--- a/app/views/secret_codes/index.html.erb
+++ b/app/views/secret_codes/index.html.erb
@@ -1,13 +1,15 @@
 <h2> Secret Codes </h2>
 <br>
 <table class="table">
-  <th>
-    <td>Codes</td>
-    <td>Associated Email</td>
-  </th>
+  <tr>
+    <th>Codes</th>
+    <th>Associated Email</th>
+  </tr>
   <% @secret_codes.each do |secret_code| %>
     <tr>
-      <td>secret_code.code</td>
+      <td>
+        <%= secret_code.code %>
+      </td>
       <td>
         <% if secret_code.user %>
           secret_code.user.email
